--- a/wp-content/plugins/nsr-vc-extended/languages/nsr-vc-extended-sv_SE.po
+++ b/wp-content/plugins/nsr-vc-extended/languages/nsr-vc-extended-sv_SE.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: NSR Visual Composer Extended\n"
 "POT-Creation-Date: 2017-01-05 09:27+0100\n"
-"PO-Revision-Date: 2017-01-05 10:04+0100\n"
+"PO-Revision-Date: 2017-01-26 11:40+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: sv\n"
@@ -322,8 +322,7 @@ msgstr "Sök på NSR"
 msgid ""
 "Where do you live? What stuff do you want to sort? Are you looking for "
 "something else?"
-msgstr ""
-"Vilken adress bor du på? Vad vill du sortera? Letar du efter något annat?"
+msgstr "Vad letar du efter?"
 
 #: source/php/Library/Addons/OpenHours.php:28
 msgid ""
