--- a/wp-content/plugins/nsr-vc-extended/languages/nsr-vc-extended-sv_SE.po
+++ b/wp-content/plugins/nsr-vc-extended/languages/nsr-vc-extended-sv_SE.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: NSR Visual Composer Extended\n"
 "POT-Creation-Date: 2017-01-27 11:31+0100\n"
-"PO-Revision-Date: 2017-01-27 11:32+0100\n"
+"PO-Revision-Date: 2017-01-30 10:32+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: sv\n"
@@ -87,7 +87,7 @@ msgstr ""
 
 #: source/php/Library/Addons/ListLinksWithThumbnail.php:123
 msgid "List links with thumbnail"
-msgstr "Puff med länkar"
+msgstr "Puff med meny"
 
 #: source/php/Library/Addons/ListLinksWithThumbnail.php:124
 msgid "List links, post, pages and add Thumbnail"
