--- a/wp-content/plugins/nsr-vc-extended/languages/nsr-vc-extended-sv_SE.po
+++ b/wp-content/plugins/nsr-vc-extended/languages/nsr-vc-extended-sv_SE.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: NSR Visual Composer Extended\n"
 "POT-Creation-Date: 2017-01-27 11:31+0100\n"
-"PO-Revision-Date: 2017-01-30 10:32+0100\n"
+"PO-Revision-Date: 2017-08-02 16:04+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 2.0.2\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-WPHeader: nsr-vc-extended.php\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -334,7 +334,9 @@ msgstr "Sök på NSR"
 msgid ""
 "Where do you live? What stuff do you want to sort? Are you looking for "
 "something else?"
-msgstr "Vad letar du efter?"
+msgstr ""
+"Vad letar du efter? (För tömningsdagar skriv gatuadress och nummer. För "
+"sorteringsguide skriv avfallet du vill sortera)"
 
 #: source/php/Library/Addons/OpenHours.php:28
 msgid ""
