Translation - edit search text

--- a/wp-content/plugins/nsr-vc-extended/languages/nsr-vc-extended-sv_SE.po
+++ b/wp-content/plugins/nsr-vc-extended/languages/nsr-vc-extended-sv_SE.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: NSR Visual Composer Extended\n"
 "POT-Creation-Date: 2017-08-02 16:29+0200\n"
-"PO-Revision-Date: 2017-08-11 11:51+0200\n"
+"PO-Revision-Date: 2017-08-11 11:56+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: sv\n"
@@ -348,9 +348,7 @@ msgstr "Sök på NSR"
 msgid ""
 "Where do you live? What stuff do you want to sort? Are you looking for "
 "something else?"
-msgstr ""
-"Vad letar du efter? (För tömningsdagar skriv gatuadress och nummer. För "
-"sorteringsguide skriv avfallet du vill sortera)"
+msgstr "Vad letar du efter?"
 
 #: source/php/Library/Addons/OpenHours.php:28
 msgid ""
